# syscall-interceptor

./: .gitignore  Makefile  Makefile.am  Makefile.in  README  README.md  config.h.in  config.status  config.yml  configure  configure.ac  libtool  parse_config.py  parse_config.sh
src/: Makefile.am  Makefile.in  intercept.c  main.c
src/.deps/: libtest_la-main.Plo  main.Po
